        **    etc. instead. This cleans up the code a lot and makes
        **    Path-Dispatcher more flexible.

        Add support for named captures

        Make all attributes read-only. If you need something to be read-write,
            I am open to such a change. Just let me know!

        Make _dispatcher_rule private

        Add documentation for shell tab completion

0.15 Tue Mar 16 09:40:40 2010
        ** Factored Path-Dispatcher-Declarative into its own distribution
        ** Be sure to update your dependency lists!

        Implement ->complete for Rule::Dispatch

        Add Path::Dispatcher::Rule::Alternation

        Implement case insensitivity for Rule::Eq

        Add Path::Dispatcher::Rule::Sequence - like Rule::Tokens but
            better!

        Add Path::Dispatcher::Rule::Enum

        Path autoboxing has been factored out into a private method for
            more overridability

        A few documentation improvements as usual :)

0.14 Thu Dec 31 13:18:19 2009
        Add Path::Dispatcher->complete for tab-completion

        Handle delimiters better in Path::Dispatcher::Rule::Tokens

        Factor out a _prefix method for rules to simplify their logic

0.13 Sun Aug 9 13:38:19 2009
        Add unshift_rule to classes that do Role::Rules

        Several distribution improvements

0.12 Fri Apr 17 03:21:05 2009
        Fix a bug with undefined capture variables being converted to the
            empty string and throwing warnings (reported by obra)

        Give Path::Dispatcher::Rule::Dispatch a "rules" method

0.11 Wed Apr 15 02:47:50 2009
        Fix some misnamed keys caused by de-AttributeHelper-ing

        Stop using some deprecated Moose features

        Doc fixes (Sartak and confound)

0.10 Fri Mar 6 23:40:42 2009
        The way you specify token_delimiter and case_sensitive_tokens has
            changed! You now say:
                use Path::Dispatcher::Declarative -base, -defaults => {