@@ -37,9 +37,6 @@ sub run {
         eval {
             local $SIG{__DIE__} = 'DEFAULT';
 
-            $match->rule->trace(running => 1, match => $match)
-                if $ENV{PATH_DISPATCHER_TRACE};
-
             push @results, $match->run(@args);
 
             die "Path::Dispatcher abort\n";
