@@ -23,8 +23,6 @@ sub _match {
     }
 }
 
-sub readable_attributes { shift->regex }
-
 __PACKAGE__->meta->make_immutable;
 no Any::Moose;
 
